# tiny-deep-research

./: .gitignore  README.md  jest.config.js  main_cli.py  pyproject.toml
src/: index.test.ts
test/: test_baidu.py  test_bing.py  test_ddgs.py  test_google.py  test_playwright.py  test_scraper.py  test_search_scraper.py  test_search_services.py  test_text_splitter.py
tiny_deep_research/: deep_research.py  feedback.py  prompt.py
tiny_deep_research/data_search/: __init__.py  firecrawl.py  search_scraper_mgr.py  search_services.py
tiny_deep_research/data_search/scraper/: base_scraper.py  playwright_scraper.py
tiny_deep_research/data_search/websearch/: baidu_search.py  base_search.py  base_search_engine.py  bing_search.py  ddgs_search.py  ddgs_search_engine.py  google_search.py
tiny_deep_research/llm/: llm_service.py  llm_services.py
tiny_deep_research/text_splitter/: __init__.py  base_text_splitter.py  recursive_text_splitter.py
tiny_deep_research/utils/: __init__.py  logger.py  trim_prompt.py
tinydeepresearch/loader/text_process/: recursive_text.py  text_chunk.py
